--- a/whoami/public/index.html
+++ b/whoami/public/index.html
@@ -12,7 +12,7 @@
     <meta name="msapplication-TileColor" content="#603cba">
     <meta name="theme-color" content="#ffffff">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Parthiv Menon</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
