--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">
-    </div>
+    <div id="root"></div>
+    <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
   </body>
 </html>
